добавление и удаление книги frontend
